--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Document</title>
 	<link rel="stylesheet" href="css/normalize.css" />
+	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -23,7 +24,7 @@
 						<a href="tel:+7(495)123-45-67" class="navbar__phone">+7 (495) 123-45-67</a>
 					</div>
 					<!-- /.navbar__contacts -->
-					<button class="button navbar__button">Перезвоните мне</button>
+					<button class="button navbar__button " id='button'>Перезвоните мне</button>
 					<!-- /.button navbar__button -->
 				</div>
 				<!-- /.navbar__info -->
@@ -98,12 +99,87 @@
 					</form>
 					<!-- /.offer__form -->
 				</div>
-				<!-- /.offer-block -->
+			</div>
+			<!-- /.offer-block -->
 			</div>
 			<!-- /.container -->
 		</section>
+		<section class="section portfolio">
+			<div class="container">
+				<h2 class="section-title portfolio__title">Работая с 2007 года, мы сделали более 500 ремонтов в квартирах и
+					домах
+				</h2>
+
+				<div class="slider">
+					<div class="slider__item"><img class="slider__image" src="img/portfolio/slider1.jpg" alt=""></div>
+					<!-- /.slider__item -->
+					<div class="slider__item"><img class="slider__image" src="img/portfolio/slider2.jpg" alt=""></div>
+					<!-- /.slider__item -->
+					<div class="slider__item"><img class="slider__image" src="img/portfolio/slider3.jpg" alt=""></div>
+					<!-- /.slider__item -->
+					<div class="slider__item"><img class="slider__image" src="img/portfolio/slider1.jpg" alt=""></div>
+					<!-- /.slider__item -->
+					<div class="slider__item"><img class="slider__image" src="img/portfolio/slider2.jpg" alt=""></div>
+					<!-- /.slider__item -->
+					<div class="slider__item"><img class="slider__image" src="img/portfolio/slider3.jpg" alt=""></div>
+
+					<!-- /.slider__item -->
+				</div>
+				<div class="arrows portfolio__arrows">
+					<div class="arrows__left">
+						<img src="img/portfolio/right-arrow.png" alt="">
+					</div>
+					<div class="arrows__right">
+						<img src="img/portfolio/left-arrow.png" alt="">
+					</div>
+				</div>
+				<!-- /.slider -->
+
+			</div>
+			<!-- /.container -->
+		</section>
+		<!-- /.section portfolio -->
 		<!-- /.subtitle -->
 	</main>
+	<div class="modal" id="modal">
+		<div class="modal-dialog">
+			<button class="modal-dialog__close" id='close'>&times;</button>
+			<h4 class="modal-dialog__title">Всплывающее окно</h4>
+		</div>
+	</div>
+
+
+	<!-- <script src="js/main.js"></script> -->
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+	<script src="js/modal.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script>
+		$(document).ready(function () {
+			$('.slider').slick({
+				slidesToShow: 3,
+				slidesToScroll: 1,
+				nextArrow: $('.arrows__left'),
+				prevArrow: $('.arrows__right'),
+				responsive: [
+					{
+						breakpoint: 1200,
+						settings: {
+							slidesToShow: 2,
+							slidesToScroll: 1,
+						}
+					},
+					{
+						breakpoint: 768,
+						settings: {
+							slidesToShow: 1,
+							slidesToScroll: 1
+						}
+					}
+				]
+			});
+		});
+	</script>
 </body>
 
 </html>
