--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Document</title>
 	<link rel="stylesheet" href="css/normalize.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" />
 	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/style.css" />
 </head>
@@ -109,7 +110,6 @@
 				<h2 class="section-title portfolio__title">Работая с 2007 года, мы сделали более 500 ремонтов в квартирах и
 					домах
 				</h2>
-
 				<div class="slider">
 					<div class="slider__item"><img class="slider__image" src="img/portfolio/slider1.jpg" alt=""></div>
 					<!-- /.slider__item -->
@@ -122,7 +122,6 @@
 					<div class="slider__item"><img class="slider__image" src="img/portfolio/slider2.jpg" alt=""></div>
 					<!-- /.slider__item -->
 					<div class="slider__item"><img class="slider__image" src="img/portfolio/slider3.jpg" alt=""></div>
-
 					<!-- /.slider__item -->
 				</div>
 				<div class="arrows portfolio__arrows">
@@ -134,28 +133,209 @@
 					</div>
 				</div>
 				<!-- /.slider -->
-
 			</div>
 			<!-- /.container -->
 		</section>
 		<!-- /.section portfolio -->
 		<!-- /.subtitle -->
+		<section class="section price">
+			<div class="container">
+				<h2 class="section-title price__title">У нас очень гибкая система скидок на комплексные работы!</h2>
+				<!-- /.section-title price__title -->
+				<span class="section-subtitle price__subtitle">Прайс на наши услуги</span>
+				<!-- /.section-subtitle price__subtitle -->
+				<div class="cards">
+					<div class="card price__card wow fadeInUp" data-wow-delay='0.1s'>
+						<div class="card__image"><img src="img/price/1.png" alt=""></div>
+						<!-- /.card_image -->
+						<div class="card__text">
+							<h4 class="card__title">Ремонт ванных комнат и с/у
+							</h4>
+							<!-- /.card__title -->
+							<a href="#" class="card__link">Узнать цены</a>
+							<!-- /.card__link -->
+						</div>
+						<!-- /.card__text -->
+					</div>
+					<!-- /.card -->
+					<div class="card price__card wow fadeInUp" data-wow-delay='0.2s'>
+						<div class="card__image"><img src="img/price/2.png" alt=""></div>
+						<!-- /.card_image -->
+						<div class="card__text">
+							<h4 class="card__title">Ремонт комнат и квартир
+
+							</h4>
+							<!-- /.card__title -->
+							<a href="#" class="card__link">Узнать цены</a>
+							<!-- /.card__link -->
+						</div>
+						<!-- /.card__text -->
+					</div>
+					<!-- /.card -->
+					<div class="card price__card wow fadeInUp" data-wow-delay='0.3s'>
+						<div class="card__image"><img src="img/price/3.png" alt=""></div>
+						<!-- /.card_image -->
+						<div class="card__text">
+							<h4 class="card__title">Отделка офисных помещений
+							</h4>
+							<!-- /.card__title -->
+							<a href="#" class="card__link">Узнать цены</a>
+							<!-- /.card__link -->
+						</div>
+						<!-- /.card__text -->
+					</div>
+					<!-- /.card -->
+					<div class="card price__card wow fadeInUp" data-wow-delay='0.4s'>
+						<div class="card__image"><img src="img/price/4.png" alt=""></div>
+						<!-- /.card_image -->
+						<div class="card__text">
+							<h4 class="card__title">Ремонт в новостройках
+							</h4>
+							<!-- /.card__title -->
+							<a href="#" class="card__link">Узнать цены</a>
+							<!-- /.card__link -->
+						</div>
+						<!-- /.card__text -->
+					</div>
+					<!-- /.card -->
+					<div class="card price__card wow fadeInUp" data-wow-delay='0.5s'>
+						<div class="card__image"><img src="img/price/5.png" alt=""></div>
+						<!-- /.card_image -->
+						<div class="card__text">
+							<h4 class="card__title">Ремонт кухонь</h4>
+							<!-- /.card__title -->
+							<a href="#" class="card__link">Узнать цены</a>
+							<!-- /.card__link -->
+						</div>
+						<!-- /.card__text -->
+					</div>
+					<!-- /.card -->
+					<div class="card price__card wow fadeInUp" data-wow-delay='0.6s'>
+						<div class="card__image"><img src="img/price/6.png" alt=""></div>
+						<!-- /.card_image -->
+						<div class="card__text">
+							<h4 class="card__title">Ремонт дач и коттеджей</h4>
+							<!-- /.card__title -->
+							<a href="#" class="card__link">Узнать цены</a>
+							<!-- /.card__link -->
+						</div>
+						<!-- /.card__text -->
+					</div>
+					<!-- /.card -->
+				</div>
+				<!-- /.cards -->
+			</div>
+			<!-- /.container -->
+		</section>
+		<!-- /.section price -->
+		<section class="section brif">
+			<div class="container">
+				<div class="brif-block">
+					<div class="interview brif__interview">
+						<h3 class="interview__title">Мы можем озвучить Вам примерную стоимость работы и материалов по телефону
+						</h3>
+						<span class="interview__subtitle">Для этого нужно ответить на 4 вопроса:</span>
+						<ul class="interview-list">
+							<li class="interview-list__item">
+								<span class="interview-list__counter">1</span>
+								<span class="interview-list__text">Какова площадь помещения?</span>
+							</li>
+							<li class="interview-list__item">
+								<span class="interview-list__counter">2</span>
+								<span class="interview-list__text">У Вас новостройка или вторичное жилье?</span>
+							</li>
+							<li class="interview-list__item">
+								<span class="interview-list__counter">3</span>
+								<span class="interview-list__text">Где находится помещение, в котором будет
+									производиться ремонт?</span>
+							</li>
+							<li class="interview-list__item">
+								<span class="interview-list__counter">4</span>
+								<span class="interview-list__text">Назначение помещения?</span>
+							</li>
+						</ul>
+					</div>
+					<!-- /.interview brif__interview -->
+					<div class="form brif__form">
+						<h3 class="form__title">Оставьте заявку на бесплатный расчет ремонта по телефону</h3>
+						<span class="form__subtitle">Оставьте заявку на бесплатный расчет ремонта по телефону</span>
+						<form action="#" id="brif-form">
+							<input type="text" name="username" required class="input brif__input" placeholder="Ваше Имя">
+							<input type="tel" name="phone" class="input brif__input phone" placeholder="Ваш Телефон">
+							<input type="email" name="email" class="input brif__input" placeholder="Ваш email">
+							<button class="button brif__button">узнать стоимость</button>
+							<span class="form__description">Мы перезвоним Вам в течение 60 секунд</span>
+						</form>
+					</div>
+					<!-- /.form brif__form -->
+				</div>
+				<!-- /.brif-block -->
+			</div>
+			<!-- /.container -->
+		</section>
+		<!-- /.section brif -->
 	</main>
+	<footer class="footer">
+		<div class="map" id="map">
+			<script type="text/javascript" charset="utf-8" async
+				src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab87b539b71fb9a8738af1b60513c8f3a952a6c7330b56cb552787f0a2bc52ca4&amp;width=100%25&amp;height=640&amp;lang=ru_RU&amp;scroll=false">
+				</script>
+		</div>
+		<div class="container">
+			<div class="contacts-block">
+				<div class="contacts">
+					<h3 class="contacts__title">Приездайте к нам в гости!проконсультируем Вас
+						по всем вопросам ремонта
+					</h3>
+					<ul class="contacts-list">
+						<li class="contacts-list__item">
+							<span class="contacts-list__icon">
+								<img src="img/hero/calculator.png" alt="">
+							</span>
+							<span class="contancts-list__text">Россия, Москва,<br> посёлок Толстопальцево, улица Ленина, 10
+							</span>
+						</li>
+						<li class="contacts-list__item">
+							<span class="contacts-list__icon">
+								<img src="img/hero/paint-board.png" alt="">
+							</span>
+							<span class="contancts-list__text">Режим работы:<br> с 9:00 до 18:00
+
+						</li>
+						<li class="contacts-list__item">
+							<span class="contacts-list__icon">
+								<img src="img/hero/clock.png" alt="">
+							</span>
+							<span class="contacts-list__text">Телефон <br>
+								<a href="tel:+7(985)123-45-67">+7(985)123-45-67</a></span>
+						</li>
+					</ul>
+				</div>
+				<!-- /.contacts -->
+			</div>
+			<!-- /.contacts-block -->
+		</div>
+	</footer>
 	<div class="modal" id="modal">
 		<div class="modal-dialog">
 			<button class="modal-dialog__close" id='close'>&times;</button>
 			<h4 class="modal-dialog__title">Всплывающее окно</h4>
 		</div>
 	</div>
-
-
 	<!-- <script src="js/main.js"></script> -->
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"
 		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	<script src="js/modal.js"></script>
 	<script src="js/slick.min.js"></script>
+	<script src="js/wow.min.js"></script>
+	<script src="js/jquery.validate.min.js"></script>
+	<script src="js/jquery.maskedinput.min.js"></script>
 	<script>
+		new WOW().init();
+
 		$(document).ready(function () {
+			$('.phone').mask('+7 (999) 999-99-99')
+
 			$('.slider').slick({
 				slidesToShow: 3,
 				slidesToScroll: 1,
@@ -180,6 +360,38 @@
 			});
 		});
 	</script>
+	<script>
+		$(document).ready(function () {
+			$('#brif-form').validate({
+				rules: {
+					username: {
+						required: true,
+						minlength: 2
+					},
+					phone: {
+						required: true,
+					}
+				},
+				email: {
+					required: true,
+					email: true
+				},
+				messages: {
+					username: {
+						required: "имя мать втою",
+						minlength: jQuery.validator.format("введите хотябы {2} символа")
+					},
+					phone: {
+						required: "телефон блеать",
+					},
+					email: 'введи гребаное мыло'
+				}
+			});
+		});
+
+	</script>
+
+
 </body>
 
 </html>
