--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,8 @@
 						<a href="tel:+7(495)123-45-67" class="navbar__phone">+7 (495) 123-45-67</a>
 					</div>
 					<!-- /.navbar__contacts -->
-					<button class="button navbar__button " id='button'>Перезвоните мне</button>
+					<button class="button navbar__button" onclick="ym(64700584, 'reachGoal', 'button'); return true;"
+						id='button'>Перезвоните мне</button>
 					<!-- /.button navbar__button -->
 				</div>
 				<!-- /.navbar__info -->
